# sdkwork-github

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json
.github/workflows/: package.yml  verify.yml
.sdkwork/: .gitignore  README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md
apis/app-api/github/: github-app-api.openapi.json
apis/backend-api/github/: github-backend-api.openapi.json
apis/open-api/github/: github-open-api.openapi.json
apps/: README.md
apps/sdkwork-github-pc/: .env.development.example  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  tsconfig.json  vite.config.ts
apps/sdkwork-github-pc/config/browser/: runtime-env.development.example.json
apps/sdkwork-github-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-github-pc/docs/architecture/tech/: TECH_ARCHITECTURE.md
apps/sdkwork-github-pc/docs/product/prd/: PRD.md
apps/sdkwork-github-pc/specs/: dependency.composition.json
apps/sdkwork-github-pc/src/: main.tsx  vite-env.d.ts
apps/sdkwork-github-pc/src/bootstrap/: createGithubPcRuntime.ts  routes.tsx  sdkworkAuthPcReactShim.d.ts
configs/: README.md  sdkwork-api-cloud-gateway.github.development.toml  sdkwork-api-cloud-gateway.github.production.toml
configs/topology/: cloud.split-services.development.env  cloud.split-services.production.env  self-hosted.unified-process.development.env  standalone.split-services.development.env  standalone.unified-process.development.env  standalone.unified-process.production.env
crates/: README.md
crates/sdkwork-github-api-server/: Cargo.toml
crates/sdkwork-github-api-server/src/: health.rs  http_route_manifest.rs  lib.rs  main.rs  readiness.rs  web_bootstrap.rs
crates/sdkwork-github-api-server/src/bootstrap/: catalog.rs  database.rs  iam_application_bootstrap.rs  mod.rs  routers.rs
crates/sdkwork-github-database-host/: Cargo.toml
crates/sdkwork-github-database-host/src/: lib.rs
crates/sdkwork-github-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-github-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-github-integration-provider-github/: Cargo.toml
crates/sdkwork-github-integration-provider-github/src/: client.rs  credential.rs  error.rs  lib.rs  metrics.rs  oauth.rs  public_api.rs  types.rs
crates/sdkwork-github-integration-repository-sqlx/: Cargo.toml
crates/sdkwork-github-integration-repository-sqlx/src/: bootstrap.rs  lib.rs  provider_store.rs  store.rs
crates/sdkwork-github-integration-service/: Cargo.toml
crates/sdkwork-github-integration-service/src/: catalog.rs  domain.rs  error.rs  lib.rs  ports.rs  service.rs
crates/sdkwork-github-standalone-gateway/: Cargo.toml
crates/sdkwork-github-standalone-gateway/src/: health.rs  http_route_manifest.rs  lib.rs  main.rs  readiness.rs  web_bootstrap.rs
crates/sdkwork-github-standalone-gateway/src/bootstrap/: auth.rs  routers.rs
crates/sdkwork-router-github-app-api/: Cargo.toml
crates/sdkwork-router-github-app-api/src/: dto.rs  handlers.rs  http_route_manifest.rs  lib.rs  paths.rs  routes.rs  state.rs  web_bootstrap.rs
crates/sdkwork-router-github-app-api/tests/: handler_smoke.rs
crates/sdkwork-router-github-backend-api/: Cargo.toml
crates/sdkwork-router-github-backend-api/src/: dto.rs  handlers.rs  http_route_manifest.rs  lib.rs  paths.rs  routes.rs
crates/sdkwork-router-github-backend-api/tests/: handler_smoke.rs
crates/sdkwork-routes-github-app-api/: Cargo.toml
crates/sdkwork-routes-github-app-api/src/: dto.rs  handlers.rs  lib.rs  web_bootstrap.rs
crates/sdkwork-routes-github-app-api/tests/: handler_smoke.rs
crates/sdkwork-routes-github-backend-api/: Cargo.toml
crates/sdkwork-routes-github-backend-api/src/: dto.rs  handlers.rs  http_route_manifest.rs  lib.rs  paths.rs  state.rs
crates/sdkwork-routes-github-backend-api/tests/: handler_smoke.rs
crates/sdkwork-routes-github-common/: Cargo.toml
crates/sdkwork-routes-github-common/src/: error.rs  lib.rs  response.rs
database/: README.md  database.manifest.json
database/catalog/: notable-github-repositories.json
database/contract/: prefix-registry.json  relations.yaml  schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_github_baseline.sql
database/ddl/baseline/sqlite/: 0001_github_baseline.sql
database/drift/: policy.yaml
database/migrations/: 0001_baseline.sql
database/migrations/postgres/: 0002_github_provider_account.sql  0003_github_oauth_pending.sql  0004_github_referential_integrity.sql
database/migrations/sqlite/: 0002_github_provider_account.sql  0003_github_oauth_pending.sql  0004_github_referential_integrity.sql
database/seeds/: README.md  seed.manifest.json
database/seeds/common/: 001_bootstrap.sql  001_github_bootstrap.sql
deployments/: README.md
docs/: INDEX.yaml  README.md  root-layout.md  standard-alignment-audit.md
docs/architecture/tech/: TECH-root-layout.md  TECH-standard-alignment-audit.md  TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md  github-dev.mjs  verify-github-database-framework.test.mjs  verify-github-standard-architecture.test.mjs
scripts/dev/: sdkwork-github-iam-application-bootstrap-standard.test.mjs
sdks/: README.md
sdks/_route-manifests/app-api/: sdkwork-router-github-app-api.route-manifest.json  sdkwork-routes-github-app-api.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-router-github-backend-api.route-manifest.json
sdks/sdkwork-github-app-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/sdkwork-github-app-sdk/sdkwork-github-app-sdk-typescript/: package.json
specs/: README.md  component.spec.json  topology.spec.json
tests/: README.md
tools/: README.md  github_api_materialize.mjs  github_sdk_generate.mjs  github_sdk_generator_runner.mjs
