[workspace]
members = [
    "crates/sdkwork-github-integration-service",
    "crates/sdkwork-github-integration-repository-sqlx",
    "crates/sdkwork-github-integration-provider-github",
    "crates/sdkwork-github-database-host",
    "crates/sdkwork-router-github-app-api",
    "crates/sdkwork-router-github-backend-api",
    "crates/sdkwork-github-api-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
dotenvy = "0.15"
http = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "any", "sqlite", "postgres"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

sdkwork-github-integration-service = { path = "crates/sdkwork-github-integration-service" }
sdkwork-github-integration-repository-sqlx = { path = "crates/sdkwork-github-integration-repository-sqlx" }
sdkwork-github-integration-provider-github = { path = "crates/sdkwork-github-integration-provider-github" }
sdkwork-github-database-host = { path = "crates/sdkwork-github-database-host" }
sdkwork-router-github-app-api = { path = "crates/sdkwork-router-github-app-api" }
sdkwork-router-github-backend-api = { path = "crates/sdkwork-router-github-backend-api" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork_iam_web_adapter = { package = "sdkwork-iam-web-adapter", path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_embedded_application_bootstrap = { package = "sdkwork-iam-embedded-application-bootstrap", path = "../sdkwork-iam/crates/sdkwork-iam-embedded-application-bootstrap" }
sdkwork_iam_database_host = { package = "sdkwork-iam-database-host", path = "../sdkwork-iam/crates/sdkwork-iam-database-host" }
sdkwork_router_iam_app_api = { package = "sdkwork-router-iam-app-api", path = "../sdkwork-iam/crates/sdkwork-router-iam-app-api" }
sdkwork_database_sqlx = { package = "sdkwork-database-sqlx", path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-repository = { path = "../sdkwork-database/crates/sdkwork-database-repository", package = "sdkwork-database-repository" }
