[package]
name = "sdkwork-github-api-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sdkwork-github-api-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sdkwork-github-integration-service.workspace = true
sdkwork-github-integration-repository-sqlx.workspace = true
sdkwork-github-integration-provider-github.workspace = true
sdkwork-github-database-host.workspace = true
sdkwork-router-github-app-api.workspace = true
sdkwork-router-github-backend-api.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork_iam_web_adapter.workspace = true
sdkwork_iam_embedded_application_bootstrap.workspace = true
sdkwork_iam_database_host.workspace = true
sdkwork_router_iam_app_api = { workspace = true }
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-utils-rust.workspace = true
sqlx.workspace = true
