[package]
name = "sdkwork-github-gateway-assembly"
edition.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-github application HTTP plane."

[lib]
name = "sdkwork_github_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork-github-integration-service.workspace = true
sdkwork_routes_github_app_api = { package = "sdkwork-routes-github-app-api", path = "../sdkwork-routes-github-app-api" }
sdkwork_routes_github_backend_api = { package = "sdkwork-routes-github-backend-api", path = "../sdkwork-routes-github-backend-api" }
