[package]
name = "sdkwork-github-integration-provider-github"
version.workspace = true
edition.workspace = true
description = "GitHub REST provider adapter for SDKWork GitHub integration."

[lib]
name = "sdkwork_github_integration_provider_github"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror = "2.0"
tracing.workspace = true
uuid.workspace = true
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
urlencoding = "2.1"
