[package]
name = "sdkwork-github-integration-service"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-github-integration-provider-github.workspace = true
tracing.workspace = true
thiserror = "2.0"
