[package]
name = "sdkwork-router-github-app-api"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_router_github_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-github-integration-service.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork_iam_web_adapter.workspace = true
urlencoding = "2.1"

[dev-dependencies]
tokio.workspace = true
chrono.workspace = true
sqlx.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-github-integration-repository-sqlx.workspace = true
