[package]
name = "sdkwork-router-github-backend-api"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_router_github_backend_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
http.workspace = true
serde.workspace = true
sdkwork-github-integration-service.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork_iam_web_adapter.workspace = true
