[package]
name = "sdkwork-routes-github-common"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_routes_github_common"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
http.workspace = true
serde.workspace = true
sdkwork-github-integration-service.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-core.workspace = true
